--- a/main.html
+++ b/main.html
@@ -40,7 +40,12 @@
                 element to be a button -->
             </nav>
         </div>
+        <div>
+            {{name}}
+        <div>
     </header>
     <!-- End of the header --> 
+
+
 </body>
 </html>
